fix: pets gallery block refactored to 2 flex containers (without setting fixed gap - responsive approach)

--- a/shelter/src/sass/sections/_help.scss
+++ b/shelter/src/sass/sections/_help.scss
@@ -2,7 +2,7 @@
     background-color: $color-light-xl;
 }
 .help-content {
-    padding: 80px 40px 100px 40px;
+    padding: 79px 40px 100px 40px;
     // background-color: yellowgreen;
 
     &__title {
